[project]
name = "hedys-mcp"
version = "0.1.0"
description = "\"Hedy's MCP server project\""
readme = "README.md"
requires-python = ">=3.13"
dependencies = [ "mcp>=1.12.2",]

[build-system]
requires = [ "uv_build>=0.8.3,<0.9.0",]
build-backend = "uv_build"

[project.scripts]
hedys-mcp = "hedys_mcp:main"
